# kiwoom-rest-api

./: .cursorrules  DEV-README.md  README.md  main.py  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: api-development-patterns.mdc  development-workflow.mdc  git-commit-rules.mdc  korean-stock-api-reference.mdc  project-structure.mdc
.obsidian/: workspace.json
canvas/: basic_stock_information_request_ka10001.canvas  structure.canvas
kiwoom-rest-api/: README.md
kiwoom-rest-api/src/kiwoom_rest_api/core/: async_client.py
kiwoom-rest-api/src/kiwoom_rest_api/koreanstock/: stockinfo.py
src/kiwoom_rest_api/: __init__.py  config.py
src/kiwoom_rest_api/auth/: token.py
src/kiwoom_rest_api/cli/: main.py
src/kiwoom_rest_api/core/: __init__.py  async_client.py  base.py  base_api.py  sync_client.py
src/kiwoom_rest_api/koreanstock/: __init__.py  account.py  analysis.py  chart.py  elw.py  market_condition.py  rank_info.py  sector.py  stockinfo.py
tests/: test_connect.py
tests/koreanstock/: test_account.py  test_chart.py  test_credit_order.py  test_elw.py  test_etf.py  test_foreign_institution.py  test_market_condition.py  test_order.py  test_rank_info.py  test_sector.py  test_stockinfo.py  test_stockinfo_async.py  test_theme.py
