[project]
name = "kiwoom-rest-api"
version = "0.1.0"
description = "Kiwoom REST API client for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
kiwoom = "kiwoom_rest_api.cli.main:app"

[tool.poetry.scripts]
kiwoom = "kiwoom_rest_api.cli.main:app"
